--- a/server/package.json
+++ b/server/package.json
@@ -16,7 +16,8 @@
     "express-fileupload": "^1.2.1",
     "pg": "^8.5.1",
     "pg-hstore": "^2.3.3",
-    "sequelize": "^6.6.1"
+    "sequelize": "^6.6.1",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "nodemon": "^2.0.7"
